--- a/B12A01-landing-launchpad/style/portfolio.css
+++ b/B12A01-landing-launchpad/style/portfolio.css
@@ -291,7 +291,87 @@ gap: 20px;
     max-width: 830px;
     max-height: 360px;
     border-radius: 48px;
-    margin: 0px 30px 0px 30px;
+    margin: 0px 30px 0px 30px; 
+}
+
+/* Let’s Get In Touch Section  */
+
+.information {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1140px;
+    max-height: 630px;
+    margin: 92.23px 159px 14px 141px;
+    gap: 90px;
+    /* padding: 0px 71px; */
+}
+.information-collume {
+    width: 50%;
+}
+form {
+    margin-top: 123.23px;
     
+}
+.information input[type="text"], .information input[type="email"]{
+    width: 490px;
+    display: block;
+    height: 70px;
+    border-radius: 10px;
+    border: 0.5px solid #b3b3b338;
+    padding: 20px 32px;
+    margin-bottom: 19px;
+    font-size: 20px;
+    font-weight: 400px;
+    margin-top: 10px;
+
+
+}
+.information textarea {
+    width: 490px;
+    display: block;
+    height: 100px;
+    border-radius: 10px;
+    border: 0.5px solid #b3b3b338;
+    padding: 20px 32px;
+    margin-bottom: 19px;
+    font-size: 20px;
+    font-weight: 400px;
+    margin-top: 10px;
+
+}
+.information a {
+    width: 490px;
+    display: flex;
+    height: 62px;
+    /* border-radius: 10px; */
+    /* border: 0.5px solid #b3b3b338; */
+    padding: 22px 190px;
+    /* margin-bottom: 19px; */
+    text-align: center;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 71px;
+
+}
+.information label {
+    font-size: 18px;
+    font-weight: medium;
+    color: #000000;
+    /* margin: 71px 0; */
+    margin-bottom: 50px;
     
+}
+
+.section-title h1 {
+    font-weight: bold;
+    font-size: 85px;
+    line-height: 120%;
+    letter-spacing: 0%;
+    max-width: 525px; 
+    max-height: 230px;
+    /* margin: 200px 110px 200px 0; */
+    text-align: left;
+
 }
