--- a/B12A01-landing-launchpad/style/portfolio.css
+++ b/B12A01-landing-launchpad/style/portfolio.css
@@ -29,7 +29,8 @@
     background-position: center;
     background-repeat: no-repeat;
     
-     max-width: 1400px ;
+     /* max-width: 1400px ; */
+     width: 100%;
     max-height: 650px;
     margin-top: 0;
     padding: 50px 0;
@@ -72,7 +73,7 @@ nav {
  .logo{
     text-decoration: none;
     color: #4E47FF;
-    font-weight: bold;
+    font-weight: 900;
     letter-spacing: 0;
     font-size: 34px;
     
@@ -306,9 +307,8 @@ gap: 20px;
     gap: 90px;
     /* padding: 0px 71px; */
 }
-.information-collume {
-    width: 50%;
-}
+
+
 form {
     margin-top: 123.23px;
     
