--- a/B12A01-landing-launchpad/style/portfolio.css
+++ b/B12A01-landing-launchpad/style/portfolio.css
@@ -17,7 +17,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    display: auto;
+    
     
 }
 
@@ -34,13 +34,11 @@ header {
 .header {
 
     background-image: url('../Assets/Hero-bg.png');
-    /* max-height: 698px; */
+    
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    
-     /* max-width: 1400px ; */
-     width: 100%;
+    width: 100%;
     max-height: 650px;
     margin-top: 0;
     padding: 50px 0;
@@ -73,8 +71,6 @@ nav {
     justify-content: space-between;
     align-items: center;
     margin: 0 150px;
-     /* margin-top: 50px; */
-     
      
 }
  .logo{
@@ -114,14 +110,9 @@ nav {
 
 .action-section {
     display: flex;
-    /* max-width: 517px; */
-    /* max-height: 203px; */
-    
     justify-content: space-between;
     align-items: center;
-
     margin: 116px 159px 116px 141px;
-    /* background-color: white; */
 }
 .section-content {
     padding: 62.5px 220px 62.5px 0;
@@ -169,7 +160,6 @@ nav {
     margin-bottom: 40px;
     text-align: center;
     letter-spacing: 0px;
-    /* padding: 50px 142px 40px; */
     padding-left: 35px;
     
     
@@ -179,9 +169,6 @@ nav {
     justify-content: space-around;
     align-items: center;
     gap: 145px;
-    
-   
-   
     
  }
 
@@ -199,39 +186,57 @@ nav {
     font-weight: 400px;
     font-size: 20px;
     color: #0000005b;
-    /* padding-bottom: 50px; */
     text-align: center;
  }
+
+
 
  /* Users Feedback Section */   
 
 
  .feedback-section {
+    /* margin: 137px 159px 137px 141px; */
+    padding: 100px 0px;
+    margin: 0 auto;
+    
    
-    margin: 137px 159px 137px 141px;
-    padding: 0px;
-    align-items: center;
+
+ }
+  .feedback-container {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    max-width: 1140px; 
+    margin: 0 auto; 
+    /* padding: 0 20px; */
+    width: 100%;
+    box-sizing: border-box;
+    margin-right: 159px;
+    margin-left: 141px;
+   
  }
  .feedback-section h2 {
     font-weight: bold;
     font-size: 40px;
     text-align: center;
+    max-width: 1140px;
     margin-bottom: 50px;
+    /* padding-right: 159px; */
+    padding-left: 280px;
  }
- .feedback-container {
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-    flex-wrap: wrap;
-    font-family: sans-serif;
- }
+
+
 .feedback-card {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.486);
+    max-height: 243px;
+    max-width: 366.67px;
     border-radius: 14px;
-    padding: 20px;
-    width: 337px;
+    padding: 24px;
     text-align: left;
     border: 0.5px solid #b3b3b338;
+    
+    
+    
 }
 .star {
     display: flex;
